# CPP_KT_20250106

./: Aufgabe OOP C++.txt  Funktionen.cpp  ZeigerUebungMitLoesung.cpp
Dateizugriff_Datenbanken/datenbanken/: main.cpp
Dateizugriff_Texte/: texte.cpp
Heapsort/: HeapSort.docx
Projekt Personen und Locations/: CMakeLists.txt  Mock.txt  location.cpp  location.h  main.cpp  personen.cpp  personen.h
QtProjekte Stefan/datenbanken/: CMakeLists.txt
QtProjekte Stefan/wxSQLite/: CMakeLists.txt  main.cpp  readme.docx  restaurants.db
QtProjekte Stefan/wxTest/: CMakeLists.txt
QtProjekte Stefan/wxwidgets/: CMakeLists.txt  main.cpp
